manychat test integration

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>NAB | Portfolio</title>
   </head>
-  <script src="//widget.manychat.com/117048291656900.js" defer="defer"></script>
+  <!-- Manychat -->
+<script src="//widget.manychat.com/117048291656900.js" defer="defer"></script>
+<script src="https://mccdn.me/assets/js/widget.js" defer="defer"></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
