--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>NAB | Portfolio</title>
   </head>
-  <!-- Manychat -->
-<script src="//widget.manychat.com/117048291656900.js" defer="defer"></script>
-<script src="https://mccdn.me/assets/js/widget.js" defer="defer"></script>
+  <script src="//code.tidio.co/tppw0s3yuaznamd4cagpnjzdj3vzpqha.js" async></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
